<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/test"
    tools:context="com.ciconi.labassignment4.TestDetailActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/black"
        android:text="@string/tests_avaliable"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/test"
        app:layout_constraintRight_toRightOf="@+id/test"
        app:layout_constraintTop_toTopOf="@+id/test"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <EditText
        android:id="@+id/BPL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@android:color/black"
        android:ems="4"
        android:hint="@string/bpl"
        android:inputType="number"
        android:selectAllOnFocus="false"
        app:layout_constraintLeft_toLeftOf="@+id/textView"
        app:layout_constraintRight_toRightOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <EditText
        android:id="@+id/BPH"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@android:color/black"
        android:ems="4"
        android:hint="@string/bph"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="@+id/BPL"
        app:layout_constraintRight_toRightOf="@+id/BPL"
        app:layout_constraintTop_toTopOf="@+id/BPL" />

    <EditText
        android:id="@+id/temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@android:color/black"
        android:ems="4"
        android:hint="@string/te"
        android:inputType="number"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/BPH"
        app:layout_constraintRight_toRightOf="@+id/BPH"
        app:layout_constraintTop_toTopOf="@+id/BPH" />



    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:onClick="saveTest"
        android:text="@string/save"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/BPH"
        app:layout_constraintRight_toRightOf="@+id/BPH"
        app:layout_constraintTop_toBottomOf="@+id/BPH"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

</android.support.constraint.ConstraintLayout>
