<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ciconi.labassignment4.LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cenntennial_hospital"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/loginActivity"
        app:layout_constraintRight_toRightOf="@+id/loginActivity"
        app:layout_constraintTop_toTopOf="@+id/loginActivity"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        />


    <EditText
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:ems="10"
        android:hint="@string/user_id"
        android:inputType="number"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="@+id/loginActivity"
        app:layout_constraintRight_toRightOf="@+id/loginActivity"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="@+id/txtLogin"
        app:layout_constraintRight_toRightOf="@+id/txtLogin"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:onClick="onClickLogin"
        android:text="@string/login"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintLeft_toLeftOf="@+id/loginActivity"
        app:layout_constraintRight_toRightOf="@+id/loginActivity"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:onClick="onClickClear"
        android:text="@string/Clear"
        app:layout_constraintHorizontal_bias="0.635"
        app:layout_constraintLeft_toLeftOf="@+id/loginActivity"
        app:layout_constraintRight_toRightOf="@+id/loginActivity"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />


    <Button
        android:id="@+id/btnGenerate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="135dp"
        android:onClick="onClickGenerate"
        android:text="@string/generatedata"
        app:layout_constraintLeft_toLeftOf="@+id/loginActivity"
        app:layout_constraintRight_toRightOf="@+id/loginActivity"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="55dp"
        android:layout_height="48dp"
        android:layout_marginTop="70dp"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        app:layout_constraintLeft_toLeftOf="@+id/loginActivity"
        app:layout_constraintRight_toRightOf="@+id/loginActivity"
        app:layout_constraintTop_toTopOf="@+id/loginActivity"
        app:srcCompat="@android:drawable/btn_star_big_on"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />
    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:orientation="horizontal">-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="User: " />-->

    <!--<EditText-->
    <!--android:id="@+id/user"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:inputType="number" />-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Password: " />-->

    <!--<EditText-->
    <!--android:id="@+id/password"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content" />-->

    <!--<Button-->
    <!--android:id="@+id/loginButton"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Login" />-->
    <!--</LinearLayout>-->


</android.support.constraint.ConstraintLayout>
